# kairos

./: .gitignore  CLAUDE.md  FEATURES.md  IMPLEMENTATION_PLAN.md  README.md  REVIEW-stage-two.md  REVIEW_STAGE_TWO.md  STAGE2_REVIEW.md  biome.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
src/: app.html  smoke.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  calendar.rs  callback_server.rs  commands.rs  db.rs  email.rs  lib.rs  main.rs  oauth.rs  scheduler.rs
src/lib/: accounts.svelte.ts  accounts.test.ts  api.ts  db.ts  types.test.ts  types.ts
src/routes/: +page.svelte
src/routes/accounts/: +page.svelte
